API(Primitive.Platform ${CMAKE_CURRENT_SOURCE_DIR}/API LINK Prm)
Impl(Primitive.Platform.Windows ${CMAKE_CURRENT_SOURCE_DIR}/Impl)
Impl(Primitive.Platform.Noop ${CMAKE_CURRENT_SOURCE_DIR}/Impl)
Build(Platform TYPE STATIC BACKEND Primitive.Platform.Windows)


set(PLATFORM_FIBER_BACKEND "ASM" CACHE STRING "Fiber backend (ASM|OS)")
if(WIN32)
  target_link_libraries(Platform PRIVATE user32 ws2_32)
  get_property(_pb_backend GLOBAL PROPERTY "MODULE_Primitive.Platform_SELECTED_BACKEND")
  if(_pb_backend STREQUAL "Windows")
    if(PLATFORM_FIBER_BACKEND STREQUAL "ASM")
      enable_Prim(ASM_MASM)
      target_sources(Platform PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Impl/Windows/FiberContext.asm)
    else()
      target_sources(Platform PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Impl/Windows/FiberContextOS.cppm)
      target_compile_definitions(Platform PRIVATE PLATFORM_FIBER_BACKEND_OS)
    endif()
  endif()
endif()
set_target_properties(Platform PROPERTIES LINKER_Prim CXX)
option(PLATFORM_ENABLE_VULKAN "Enable Vulkan WSI support" OFF)
if(PLATFORM_ENABLE_VULKAN AND WIN32)
  get_property(_pbv_backend GLOBAL PROPERTY "MODULE_Primitive.Platform_SELECTED_BACKEND")
  if(_pbv_backend STREQUAL "Windows")
    find_package(Vulkan QUIET)
    if(Vulkan_FOUND)
      target_compile_definitions(Platform PRIVATE HAS_VULKAN)
      target_link_libraries(Platform PRIVATE Vulkan::Vulkan)
    endif()
  endif()
endif()
