API(Primitive.Platform ${CMAKE_CURRENT_SOURCE_DIR}/API LINK Element;Flow;Semantics;Paradigm;Text)
Impl(Primitive.Platform.Windows ${CMAKE_CURRENT_SOURCE_DIR}/Impl)
Impl(Primitive.Platform.Noop ${CMAKE_CURRENT_SOURCE_DIR}/Impl)
Build(Platform TYPE STATIC BACKEND Primitive.Platform.Windows LINK "IO;Threading;Ownership;System;Time;Window;Socket;Input;Audio;Debug;Clipboard;File;WSI;DynamicLibrary;Element;Flow;Semantics;Paradigm;Text")


if(WIN32)
  target_link_libraries(Platform PRIVATE user32 ws2_32)
endif()
set_target_properties(Platform PROPERTIES LINKER_Prim CXX)
option(PLATFORM_ENABLE_VULKAN "Enable Vulkan WSI support" OFF)
if(PLATFORM_ENABLE_VULKAN AND WIN32)
  get_property(_pbv_backend GLOBAL PROPERTY "MODULE_Primitive.Platform_SELECTED_BACKEND")
  if(_pbv_backend STREQUAL "Windows")
    find_package(Vulkan QUIET)
    if(Vulkan_FOUND)
      target_compile_definitions(Platform PRIVATE HAS_VULKAN)
      target_link_libraries(Platform PRIVATE Vulkan::Vulkan)
    endif()
  endif()
endif()
