[package]
name = "sys_scripting"
version = "0.1.0"
edition = "2021"

[lib]
name = "sys_scripting"
path = "API/lib.rs"

[dependencies]
wasmtime = "14"
wat = "1"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
sys_vfs = { path = "../VFS" }
prm_file = { path = "../../Prm/File" }
sys_ir = { path = "../IR" }

